--- a/contact.html
+++ b/contact.html
@@ -175,7 +175,8 @@
             </div>
             <div class="col-sm-8">
               <h2 class="ui-title-block"><span class="ui-title-block__emphasis">Send Us</span> Message</h2>
-              <p>Join hands to experience and work with one of India’s fast growing logistic companies. We have the experience, network and technical and logical expertise to manage your cargos throughout South India. Hold on to your seats and fix a meeting immediately with us. Your time is our privilege. For more queries, please contact us</p>
+              <p>Join hands to experience and work with one of India’s fast growing logistic companies. We have the experience, network and technical and logical expertise to manage your cargos throughout South India. Hold on to your seats and fix a meeting immediately with us. Your time is our privilege. For more queries, please contact us - <b>inquiry@merconlogistics.com</b></p>
+              <!--
               <form class="b-form-1 b-form-1_mod-b ui-form" id="mail-form" action="mailer/mailer.php" novalidate autocomplete="off">
                 <div class="row">
                   <div class="col-md-6">
@@ -201,7 +202,7 @@
                     <button type="button" class="btn btn-default btn-w-ic btn-sm btn-effect" id="send-message" type="submit">send message<i class="icon fa fa-long-arrow-right"></i></button>
                   </div>
                 </div>
-              </form>
+              </form>-->
               <!-- end b-form-->
             </div>
           </div>
