--- a/index.html
+++ b/index.html
@@ -322,7 +322,7 @@
         </div>
       </div>
       <!-- end section-progress-->
-      
+      <!--
       <section class="section-full-width section-full-width_mod-a block-table wow">
         <div class="block-table__cell block-table__cell_2-col section-full-width__bg"></div>
         <div class="block-table__cell block-table__cell_2-col">
@@ -378,7 +378,7 @@
             </form>
           </div>
         </div>
-      </section>
+      </section> -->
       <!-- end b-form-->
       
       <section class="section-advantages-2 section-default_padd-top wow">
